--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .title {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    color: #1e51c0;
+    font-size: 27px;
+    text-shadow: -2px 1px black;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .btns {
+    font-weight: bold;
+    text-align: center;
+    font-size: 15px;
+    padding: 2px 25px;
+    border-radius: 5px;
+    margin-right: 10px;
+    padding-left: 40px;
+    opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .grid {
+    cursor: pointer; 
+    justify-content: center;
   }
-}
+  
+  .start-btn, .clear-btn, .randomize-btn, .size-btn {
+    transform: scale(1);
+    box-shadow: -2px 2px black;
+    color: black;
+    background-color: #fff;
+    border: solid 1px black;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 15px;
+    padding: 7px;
+    border-radius: 5px;
+    margin-right: 10px;
+    transition: all ease 50ms;
+  }
+  .start-btn:hover , .clear-btn:hover , .randomize-btn:hover, .size-btn:hover {
+    transform: scale(0.96);
+  }
+
+  
